--- a/moduleParent/pom.xml
+++ b/moduleParent/pom.xml
@@ -4,7 +4,16 @@
   <artifactId>moduleParent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
-  
+  <properties>
+
+<maven.compiler.source>1.8</maven.compiler.source>
+
+<maven.compiler.target>1.8</maven.compiler.target>
+
+<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+</properties>
+
     <modules>
       <module>../TpCamille</module>
       <module>../WhoAreYouWebApp</module>
