--- a/moduleParent/pom.xml
+++ b/moduleParent/pom.xml
@@ -18,5 +18,21 @@
       <module>../TpCamille</module>
       <module>../WhoAreYouWebApp</module>
   </modules>
+  -<dependencies>
+
+
+<dependency>
+
+<groupId>junit</groupId>
+
+<artifactId>junit</artifactId>
+
+<version>4.13</version>
+
+<scope>test</scope>
+
+</dependency>
+
+</dependencies>
   
 </project>
